--- a/FinalWithAuth/appsettings.json
+++ b/FinalWithAuth/appsettings.json
@@ -3,18 +3,28 @@
     "DefaultConnection": "Server=tcp:mappsterpiecesserver.database.windows.net,1433;Initial Catalog=MappsterpiecesDB;Persist Security Info=False;User ID=Mappsterpieces;Password=gNN=Mg9_R\"Vg6^Hm;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-  "IdentityServer": {
-    "Clients": {
-      "FinalWithAuth": {
-        "Profile": "IdentityServerSPA"
-      }
     }
   },
-"AllowedHosts": "*"
+  "IdentityServer": {
+    "Key": {
+      "Type": "Development"
+    },
+    "Clients": {
+      "TA_TestAzureProject": {
+        "Profile": "IdentityServerSPA"
+      }
+    },
+    //},"IdentityServer": {
+    //  "Clients": {
+    //    "FinalWithAuth": {
+    //      "Profile": "IdentityServerSPA"
+    //    }
+    //  }
+    //},
+    "AllowedHosts": "*"
+  }
 }
