ZOMFG git add .

--- a/FinalWithAuth/appsettings.json
+++ b/FinalWithAuth/appsettings.json
@@ -14,9 +14,9 @@
       "Type": "Development"
     },
     "Clients": {
-      "TA_TestAzureProject": {
-        "Profile": "IdentityServerSPA"
-      }
+      "FinalWithAuth": {
+      "Profile": "IdentityServerSPA"
+    }
     },
     //},"IdentityServer": {
     //  "Clients": {
